--- a/Immediate_Mode/Immediate_Mode.csproj
+++ b/Immediate_Mode/Immediate_Mode.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Camera3D.cs" />
     <Compile Include="ImmediateMode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
